# idobata

./: .gitignore  CMakeLists.txt  README.md
src/: idobata.c  idobata.h  idobata_client.c  idobata_helo.c  idobata_server.c  idobata_util.c  linkedlist.c
